tests/ui/cached_async_requires_async_feature.stderr
error: #[cached]/#[once]/#[concurrent_cached] on an async function requires the `async` feature of the `cached` crate
 --> tests/ui/cached_async_requires_async_feature.rs:3:1
  |
3 | #[cached]
  | ^^^^^^^^^
  |
  = note: this error originates in the macro `::cached::__require_async_feature` which comes from the expansion of the attribute macro `cached` (in Nightly builds, run with -Z macro-backtrace for more info)
